[package]
name = "rng-trouble"
version = "0.1.0"
authors = ["Ben Wiederhake <BenWiederhake.GitHub@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_xoshiro = "0.4.0"
rand_core = "0.5.1"
rand = "0.7.2"  # Comment this line and everything breaks.  Huh?!
